ver 1.2. atualizados os estilos para ser mais amigavel ao usuario

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 	
 	 <div class="conteudo">
+		<div class="titulo">
+			<h1>*To do</h1>
+		</div>
+
 		<div class="topo">
 			<input type="text" 
 				id="inputNovaTarefa" 
@@ -19,8 +23,9 @@
 			<button id="addtarefa">
 				<i class="fa fa-plus"> </i>
 			</button>
+			
 		</div>
-		
+	
 		<ul id="listadorDeTarefas">
 		</ul>	
 	 </div>
@@ -43,6 +48,7 @@
 <div id="janelaEdicaoFundo"></div>
 
 <script src="js/trefas.js"> </script>
+
 	
 </body>
 </html>
